src/scss/catalog.scss
.catalog {
  margin-top: 44px;
  margin-bottom: 145px;
  text-align: center;
  &-title {
    color: #43a4b1;
    margin-bottom: 50px;
  }
  &-programs {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: wrap;
  }
  &-program {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 350px;
    border-radius: 30px;
    background: $color-white;
    color: $text-color;
    box-shadow: 2px 2px 15px rgba(110, 155, 162, 0.27);
    margin-bottom: 100px;
  }
  .program {
    &-header {
      display: flex;
      align-items: center;
      margin-top: 15px;
    }
    &-like {
      position: absolute;
      top: -30px;
      left: 89%;
      width: 70px;
      height: 70px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      background: $color-white;
      border-radius: 50%;
      box-shadow: 2px 2px 15px rgba(110, 155, 162, 0.27);
      &__img {
        width: 28px;
        height: 28px;
        margin-bottom: 5px;
        fill: $main-color;
      }
      &__text {
        font-family: 'Montserrat', 'Medium';
        font-size: 14px;
        color: $main-color;
      }
    }
    &-title {
      font-family: 'Roboto';
      font-weight: bold;
      font-size: 32px;
    }
    &-logo {
      img {
        margin-right: 16px;
        width: 45px;
        height: 45px;
      }
    }
    &-description,
    &-more {
      font-family: Montserrat;
      margin-top: 20px;
    }
    &-description {
      font-size: 15px;
      text-align: center;
      max-width: 300px;
      color: $main-color;
    }
    &-more,
    &-download {
      font-size: 16px;
      text-decoration: none;
      color: $text-color;
    }
    &-more {
      border-bottom: 1px solid $text-color;
      margin-bottom: 45px;
    }
    &-download {
      position: absolute;
      top: 90%;
      left: calc(50% - 100px);
      background: $color-white;
      box-shadow: 2px 9px 15px rgba(110, 155, 161, 0.15);
      border-radius: 30px;
      text-decoration: none;
      width: 200px;
      height: 55px;
      display: flex;
      align-items: center;
      justify-content: center;
      &__img {
        margin-right: 15px;
        width: 40px;
        height: 40px;
      }
    }
  }
}

@media (max-width: 768px) {
  .catalog {
    margin-bottom: 0;
    &-title {
      margin-bottom: 70px;
    }
    &-program {
      margin-bottom: 150px;
    }
    .program {
      &-like {
        position: absolute;
        left: calc(50% - 35px);
        top: -50px;

        &__img {
          width: 28px;
          height: 28px;
          margin-bottom: 5px;
          fill: $main-color;
        }
        &__text {
          font-family: 'Montserrat', 'Medium';
          font-size: 14px;
          color: $main-color;
        }
      }
    }
  }
}

.zoom {
  $zoom-color: #158edd;
  color: $zoom-color;
  .program-download__img,
  .program-like__img {
    fill: $zoom-color;
  }
}
.skype {
  $skype-color: #2196f3;
  color: $skype-color;
  .program-download__img,
  .program-like__img {
    fill: $skype-color;
  }
}
.whatsapp {
  $whatsapp-color: #64b161;
  color: $whatsapp-color;
  .program-download__img,
  .program-like__img {
    fill: $whatsapp-color;
  }
}

